[add] #1 binding 관련 gradle 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ android {
         viewBinding true
         dataBinding true
     }
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
 }
 
 dependencies {
