--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.DoSoptTemplate"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.profileDetail.ProfileDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.auth.SignUpActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
