--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
         <activity
             android:name=".presentation.HomeActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:exported="false" />
     </application>
 
