[add] #11 gradle 추가 (room, coil)

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         hilt_version = '2.47'
         lifecycle_version = '2.6.1'
+        room_version = '2.4.3'
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
