--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,20 +56,20 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // Ktx
-    implementation 'androidx.fragment:fragment-ktx:1.6.1'
+    implementation "androidx.fragment:fragment-ktx:1.6.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
-    implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
-    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha06'
+    implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
+    implementation "androidx.security:security-crypto-ktx:1.1.0-alpha06"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     // Timber
-    implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation "com.jakewharton.timber:timber:5.0.1"
 
     // Network
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
@@ -77,5 +77,5 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     // Coil
-    implementation 'io.coil-kt:coil:2.4.0'
+    implementation "io.coil-kt:coil:2.4.0"
 }
