--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,16 @@ dependencies {
 
     // Coil
     implementation "io.coil-kt:coil:2.4.0"
+
+    // Network
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0'
+
+    // BOM
+    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.10.0"))
+
+    // okhttp3
+    implementation("com.squareup.okhttp3:okhttp")
+    implementation("com.squareup.okhttp3:logging-interceptor")
 }
